# collision-avoidance-rl

./: README.md  pyproject.toml
collision_avoidance_rl/: helper.py  utils.py
collision_avoidance_rl/human/: game.py
collision_avoidance_rl/models/: model-0.pth  model-1.pth  model-2.pth  model-3.pth  model.pth
collision_avoidance_rl/train/: agent.py  game.py  model.py
collision_avoidance_rl/trained/: agent.py  game.py  model.py
