[tool.poetry]
name = "collision-avoidance-rl"
version = "0.1.0"
description = ""
authors = ["bryanrp <66724556+bryanrp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
matplotlib = "^3.8.4"
ipython = "^8.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
